updated OpenAPI yaml again
